[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/scripts/SteamLobby.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/button-click.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sprites/singleplayer.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/multiplayer.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/massiveMultiplayer.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "Searching"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SearchingSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SearchingSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MultiplayerMenu" type="CanvasLayer"]
script = ExtResource( 2 )
clickSound = ExtResource( 3 )

[node name="HostButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -931.0
margin_top = -513.0
margin_right = -612.0
margin_bottom = -439.0
custom_fonts/font = SubResource( 1 )
text = "HOST GAME"

[node name="InviteFriends" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -931.0
margin_top = -306.0
margin_right = -612.0
margin_bottom = -232.0
custom_fonts/font = SubResource( 1 )
text = "INVITE FREINDS"

[node name="FindPlayersButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -931.0
margin_top = -410.0
margin_right = -612.0
margin_bottom = -336.0
custom_fonts/font = SubResource( 1 )
text = "FIND PLAYERS"

[node name="CancelSearchButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -931.0
margin_top = -410.0
margin_right = -612.0
margin_bottom = -336.0
custom_fonts/font = SubResource( 1 )
text = "CANCEL SEARCH"

[node name="SendMessageButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 600.0
margin_top = 426.0
margin_right = 919.0
margin_bottom = 500.0
focus_mode = 1
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "SEND MESSAGE"

[node name="TextEdit" type="TextEdit" parent="SendMessageButton"]
margin_left = -1152.0
margin_right = -23.0
margin_bottom = 74.0
shortcut_keys_enabled = false

[node name="FindGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -931.0
margin_top = -410.0
margin_right = -612.0
margin_bottom = -336.0
custom_fonts/font = SubResource( 1 )
text = "FIND GAME"

[node name="LeaveLobbyButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -931.0
margin_top = 426.0
margin_right = -612.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 1 )
text = "LEAVE LOBBY"

[node name="MainMenuButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -931.0
margin_top = 426.0
margin_right = -612.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 1 )
text = "MAIN MENU"

[node name="StartGameButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 600.0
margin_top = -410.0
margin_right = 919.0
margin_bottom = -336.0
custom_fonts/font = SubResource( 1 )
text = "START GAME"

[node name="SteamName" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -931.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 2 )
text = "Steam Name"
align = 2
valign = 1
uppercase = true

[node name="Players" type="Panel" parent="."]
margin_left = 29.0
margin_top = 335.0
margin_right = 348.0
margin_bottom = 924.0

[node name="Label" type="Label" parent="Players"]
margin_right = 319.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "PLAYERS (0)"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="Players"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 49.0
__meta__ = {
"_edit_lock_": true
}

[node name="Chat" type="Panel" parent="."]
margin_left = 408.0
margin_top = 240.0
margin_right = 1879.0
margin_bottom = 924.0

[node name="Label" type="Label" parent="Chat"]
margin_right = 319.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "LOBBY NAME"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="Chat"]
margin_top = 49.0
margin_right = 319.0
margin_bottom = 684.0
__meta__ = {
"_edit_lock_": true
}

[node name="SearchingSprite" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 370.0
margin_top = 150.0
margin_right = 411.0
margin_bottom = 191.0
texture = ExtResource( 4 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="SearchingSprite"]
root_node = NodePath("../..")
autoplay = "Searching"
anims/Searching = SubResource( 3 )

[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="FindPlayersButton" to="." method="_on_FindPlayersButton_pressed"]
[connection signal="pressed" from="CancelSearchButton" to="." method="_on_CancelSearchButton_pressed"]
[connection signal="pressed" from="SendMessageButton" to="." method="_on_SendMessageButton_pressed"]
[connection signal="text_changed" from="SendMessageButton/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="FindGameButton" to="." method="_on_FindGameButton_pressed"]
[connection signal="pressed" from="LeaveLobbyButton" to="." method="_on_LeaveLobbyButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
